tests/snapshots/plan__a_bookmark_shared_with_a_kept_bookmark_is_kept_for_retry.snap
---
source: tests/plan.rs
expression: render(&plan)
---
Nothing to clean.

skipped:
  bookmark "open-child": #2 is still open
  bookmark "stack-base": held by another bookmark
