tests/snapshots/plan__a_stale_trailer_for_another_branch_is_warned_about.snap
---
source: tests/plan.rs
expression: render(&plan)
---
  abandon 1 revision for bookmark "local-name"

warnings:
  bookmark "local-name" carries a trailer for #1, which was opened from "renamed-branch"
