tests/snapshots/plan__a_workspace_holding_a_locked_bookmark_is_refused.snap
---
source: tests/plan.rs
expression: render(&plan)
---
Nothing to clean.

skipped:
  bookmark "feat-x": locked
