tests/snapshots/plan__an_absent_default_branch_is_warned_about.snap
---
source: tests/plan.rs
expression: render(&plan)
---
Nothing to clean.

skipped:
  bookmark "feat-x": the default branch is unknown

warnings:
  Could not determine the default branch. Cleanup candidates were refused.
