tests/snapshots/plan__closed_pull_requests_are_cleanable_with_the_closed_filter.snap
---
source: tests/plan.rs
expression: render(&plan)
---
  abandon 1 revision for bookmark "closed-one"
