tests/snapshots/plan__closed_pull_requests_need_the_closed_filter.snap
---
source: tests/plan.rs
expression: render(&plan)
---
Nothing to clean.

skipped:
  bookmark "closed-one": no merged PR (#3 is closed). Use --state closed to include closed PRs
