tests/snapshots/plan__open_and_locked_and_conflicted_bookmarks_are_refused.snap
---
source: tests/plan.rs
expression: render(&plan)
---
Nothing to clean.

skipped:
  bookmark "broken": conflicted
  bookmark "lock-me": locked
  bookmark "open-one": #2 is still open
