tests/snapshots/plan__remove_deletes_the_directory_instead_of_forgetting_it.snap
---
source: tests/plan.rs
expression: render(&plan)
---
  remove workspace "ws2" and delete /repo-ws2
  abandon 1 revision for bookmark "feat-x"
