tests/snapshots/plan__revisions_already_in_trunk_are_only_deleted.snap
---
source: tests/plan.rs
expression: render(&plan)
---
  delete bookmark "landed" (already in trunk)
