tests/snapshots/plan__the_default_branch_is_never_cleaned.snap
---
source: tests/plan.rs
expression: render(&plan)
---
Nothing to clean.

skipped:
  bookmark "main": is the default branch
