tests/snapshots/plan__workspaces_on_a_merged_stack_are_forgotten.snap
---
source: tests/plan.rs
expression: render(&plan)
---
  forget workspace "ws2"
  abandon 1 revision for bookmark "feat-x"
